--- a/device_local_monitor/acrcloud_config.ini
+++ b/device_local_monitor/acrcloud_config.ini
@@ -15,6 +15,8 @@ max_size = 10*1024*1024
 [rec]
 timeout = 8
 filter_energy_min = 100
+
+#"slienace_energy_threshiold" and "silence_rate_threshold" are used in combination. It means that the energy values of 10s audio less than [slienace_energy_threshiold] do not exceed [silence_rate_threshold].
 silence_energy_threshold = 2000
 silence_rate_threshold = 0.7
 
