--- a/device_local_monitor/acrcloud_config.ini
+++ b/device_local_monitor/acrcloud_config.ini
@@ -1,6 +1,6 @@
 [api]
 access_key = 
-stream_ids =
+stream_ids = 
 url = https://api.acrcloud.com/v1/local-monitor-streams
 
 [log]
@@ -24,3 +24,8 @@ silence_rate_threshold = 0.7
 detect_interval = 5
 open_timeout = 10
 read_timeout = 30
+
+[device]
+#If set sample_rate and channels to 0, the default values of this device will be used.
+sample_rate = 0 
+channels = 0
